!332 文档添加运行说明等 * 文档添加运行说明等

--- a/doc/zh/使用说明.md
+++ b/doc/zh/使用说明.md
@@ -43,9 +43,12 @@ ${INSTALL_PATH}/
               |-- set_env.sh
               |-- ${version}
                    |-- ${arch}-${os}
+                        |-- bin        (可执行文件)
                         |-- include    (头文件)
                         |-- lib64      (so库)
+                        |-- script     (脚本)
                         |-- whl        (python的whl包)
+                   |-- config     (配置文件)
                    |-- uninstall.sh
                    |-- version.info
 
@@ -68,7 +71,7 @@ H2G: copy data from host DRAM memory to global HBM space
 G2H: copy data from global HBM space to host DRAM memory
 ```
 
-安装memfabri hybrid后，BM接口详情参见
+安装memfabric hybrid后，BM接口详情参见
 ```${INSTALL_PATH}/mxc/memfabric_hybrid/latest/${arch}-${os}/include/smem/host/smem_bm.h```
 
 #### Share Memory(SHM)
@@ -79,33 +82,58 @@ G2H: copy data from global HBM space to host DRAM memory
     * 卡侧提供基础copy接口
     * 接口支持的语言: c, python
 
-安装memfabri hybrid后，SHM接口详情参见
+安装memfabric hybrid后，SHM接口详情参见
 ```
 ${INSTALL_PATH}/mxc/memfabric_hybrid/latest/${arch}-${os}/include/smem/host/smem_shm.h
 和
 ${INSTALL_PATH}/mxc/memfabric_hybrid/latest/${arch}-${os}/include/smem/device/lowlevel/smem_shm_aicore_base_api.h
 ```
 
+#### Memory Cache(MMC)
+    * 提供和Kimi Mooncake形式一致的python接口
+安装memfabric hybrid后，MMC接口详情参见
+```
+${INSTALL_PATH}/mxc/memfabric_hybrid/latest/${arch}-${os}/include/memcache
+```
+
 ### 使用方法
 #### C接口
 安装完成run包并source安装路径下的set_env.sh后，会添加memfabric_hybrid安装路径的环境变量MEMFABRIC_HYBRID_HOME_PATH
 
-使用memfabric_hybrid相关接口时，需要include相关头文件(在${MEMFABRIC_HYBRID_HOME_PATH}/aarch64-linux/include/smem/host路径下)，并且在**链接时需要添加libmf_smem.so**(在${MEMFABRIC_HYBRID_HOME_PATH}/aarch64-linux/lib64路径下)依赖
+使用memfabric_hybrid相关接口时，需要include相关头文件(在${MEMFABRIC_HYBRID_HOME_PATH}/aarch64-linux/include/路径下)，并且在**链接时需要添加对应so**(在${MEMFABRIC_HYBRID_HOME_PATH}/aarch64-linux/lib64路径下)依赖
 
 可以通过MEMFABRIC_HYBRID_HOME_PATH环境变量指定头文件和lib库依赖路径，从而完成代码构建
 
 具体可以参考example/bm/BmCpp中CMakeLists.txt
 
-[C接口API列表](./C_API.md)
+[C接口API列表](C_API.md)
 
 #### Python接口
-安装完成run包并source安装路径下的set_env.sh后，即可在python中通过**import mf_smem**导入memfabric_hybrid的python包，然后调用python接口
+安装完成run包并source安装路径下的set_env.sh后，即可在python中通过import方式导入memfabric_hybrid的python包，然后调用python接口
 
 python接口为c接口的封装，功能一致，具体介绍可以在python中使用help函数获取，参考如下
 ```python
-import mf_smem  #导入memfabric_hybrid
-help(mf_smem)   #查看memfabric_hybrid基础函数介绍
-help(mf_smem.bm)    #查看big memory接口介绍
-help(mf_smem.shm)   #查看share memory接口介绍
+import mf_smem      # 导入smem
+help(mf_smem)       # 查看smem基础函数介绍
+help(mf_smem.bm)    # 查看big memory接口介绍
+help(mf_smem.shm)   # 查看share memory接口介绍
+```
+
+```python
+import pymmc        # 导入pymmc
+help(pymmc)         # 查看pymmc基础函数介绍
+```
+
+#### 端到端运行Memcache流程
+**1. 启动metaservice独立进程**
+```
+export MMC_META_CONFIG_PATH=/usr/local/mxc/memfabric_hybrid/latest/config/mmc-meta.conf
+./mmc_meta_service
+```
+
+**2. 通过pymmc提供的接口初始化客户端并拉起localservice，执行数据写入、查询、获取、删除等**
+```
+export MMC_LOCAL_CONFIG_PATH=/usr/local/mxc/memfabric_hybrid/latest/config/mmc-local.conf
+python3 -m unittest test_mmc_demo.py
 ```
 
